--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
 
-    <color name="yellow">#FFC801</color>
+    <color name="yellow">#01FFFF</color>
 
 </resources>
